[css] Fixing small screen spacing for contact addresses

--- a/src/assets/scss/_base_text.scss
+++ b/src/assets/scss/_base_text.scss
@@ -65,3 +65,11 @@ hr {
 .spaced {
     letter-spacing: 1px;
 }
+
+.adr {
+    margin-bottom: $-space;
+
+    @include media(md) {
+        margin-bottom: 0;
+    }
+}
