--- a/src/assets/scss/_components_map.scss
+++ b/src/assets/scss/_components_map.scss
@@ -10,7 +10,6 @@ $-Map-ui-color: $-color-light-green;
 
 .Map {
     position: relative;
-    margin-top: $-space;
     border: 0 solid $-border-color-light;
     border-width: 1px 0;
 
@@ -23,7 +22,7 @@ $-Map-ui-color: $-color-light-green;
     position: relative;
     width: 100%;
     height: 200px;
-    background-color: #e7eaf0;
+    background-color: $-color-white;
 
     @include media(sm) {
         height: 400px;
